#add_library(common STATIC "")

#target_sources(common
    #PRIVATE
    #)

#target_link_libraries(common pthread usb-1.0 GSL spdlog)

#target_include_directories(common
    #PUBLIC
    #${CMAKE_SOURCE_DIR}/dependencies/spdlog/include
    #${CMAKE_SOURCE_DIR}/dependencies/GSL/include
    #${CMAKE_CURRENT_SOURCE_DIR}
    #)
